Add setup validation and summary sections to Chapter 1 notebooks

--- a/01-single-agents/01.2-single-agent-mcp.ipynb
+++ b/01-single-agents/01.2-single-agent-mcp.ipynb
@@ -17,16 +17,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3c65b71",
+   "id": "setup-validation",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "from agent_framework.azure import AzureOpenAIChatClient\n",
     "\n",
-    "# Load environment variables\n",
+    "# Load environment variables from .env file\n",
     "load_dotenv()\n",
+    "\n",
+    "# Required environment variables\n",
+    "required_vars = [\n",
+    "    \"AZURE_OPENAI_ENDPOINT\",\n",
+    "    \"AZURE_OPENAI_API_KEY\",\n",
+    "    \"AZURE_OPENAI_API_VERSION\",\n",
+    "    \"AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\"\n",
+    "]\n",
+    "\n",
+    "# Validate setup\n",
+    "missing = [var for var in required_vars if not os.getenv(var)]\n",
+    "\n",
+    "if missing:\n",
+    "    print(\"Missing required environment variables:\")\n",
+    "    for var in missing:\n",
+    "        print(f\"  - {var}\")\n",
+    "    print(\"\\nPlease create a .env file with these variables or set them in your environment.\")\n",
+    "else:\n",
+    "    print(\"Setup validated! All required environment variables are set.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3c65b71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from agent_framework.azure import AzureOpenAIChatClient\n",
     "\n",
     "endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
     "api_key = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
@@ -252,6 +281,65 @@
     "```\n",
     "\n",
     "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "summary-recap",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Summary & Recap\n",
+    "\n",
+    "In this notebook, you learned how to extend your agents with **Model Context Protocol (MCP)** servers:\n",
+    "\n",
+    "### Key Concepts\n",
+    "\n",
+    "| Concept | Description |\n",
+    "|---------|-------------|\n",
+    "| **MCP (Model Context Protocol)** | A standard protocol for connecting AI agents to external tools and services |\n",
+    "| **MCPStreamableHTTPTool** | Agent Framework class for connecting to MCP servers over HTTP |\n",
+    "| **Remote MCP Servers** | Hosted services like Microsoft Learn (`https://learn.microsoft.com/api/mcp`) |\n",
+    "| **Local MCP Servers** | Self-hosted servers for custom tools (e.g., FastMCP) |\n",
+    "\n",
+    "### What You Built\n",
+    "\n",
+    "1. **Documentation Agent** - Connected to Microsoft Learn MCP for real-time docs lookup\n",
+    "2. **Customer Service Agent** - Used a local MCP server to query customer data\n",
+    "\n",
+    "### Key Patterns\n",
+    "\n",
+    "```python\n",
+    "# Connecting to an MCP server\n",
+    "async with MCPStreamableHTTPTool(\n",
+    "    name=\"MyMCPServer\",\n",
+    "    url=\"http://server-address/mcp\",\n",
+    "    chat_client=client\n",
+    ") as mcp_tool:\n",
+    "    \n",
+    "    # Use MCP tools with your agent\n",
+    "    response = await agent.run(\n",
+    "        \"Your query here\",\n",
+    "        tools=mcp_tool\n",
+    "    )\n",
+    "```\n",
+    "\n",
+    "### Why MCP?\n",
+    "\n",
+    "- **Standardized** - One protocol to connect to many different tool providers\n",
+    "- **Dynamic** - Tools are discovered at runtime, not hardcoded\n",
+    "- **Extensible** - Easy to add new capabilities by connecting to additional MCP servers\n",
+    "- **Separation of Concerns** - Tool logic lives in the MCP server, agent logic stays clean\n",
+    "\n",
+    "### Chapter 1 Complete!\n",
+    "\n",
+    "You now have the foundation for building single agents with:\n",
+    "- Custom function tools\n",
+    "- Multi-turn conversations\n",
+    "- Middleware for observability\n",
+    "- MCP integration for external services\n",
+    "\n",
+    "In **Chapter 2**, you'll learn how to orchestrate **multiple agents** working together in workflows!"
    ]
   }
  ],
