--- a/01-single-agents/01.1-single-agents.ipynb
+++ b/01-single-agents/01.1-single-agents.ipynb
@@ -58,17 +58,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "setup-validation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing required environment variables:\n",
+      "  - AZURE_OPENAI_ENDPOINT\n",
+      "  - AZURE_OPENAI_API_KEY\n",
+      "  - AZURE_OPENAI_API_VERSION\n",
+      "  - AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\n",
+      "\n",
+      "Please create a .env file with these variables or set them in your environment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Required environment variables\n",
+    "required_vars = [\n",
+    "    \"AZURE_OPENAI_ENDPOINT\",\n",
+    "    \"AZURE_OPENAI_API_KEY\",\n",
+    "    \"AZURE_OPENAI_API_VERSION\",\n",
+    "    \"AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\"\n",
+    "]\n",
+    "\n",
+    "# Validate setup\n",
+    "missing = [var for var in required_vars if not os.getenv(var)]\n",
+    "\n",
+    "if missing:\n",
+    "    print(\"Missing required environment variables:\")\n",
+    "    for var in missing:\n",
+    "        print(f\"  - {var}\")\n",
+    "    print(\"\\nPlease create a .env file with these variables or set them in your environment.\")\n",
+    "else:\n",
+    "    print(\"Setup validated! All required environment variables are set.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "1a1a0595",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from dotenv import load_dotenv\n",
     "from agent_framework.azure import AzureOpenAIChatClient\n",
     "\n",
-    "# Load environment variables\n",
-    "load_dotenv()\n",
     "\n",
     "endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
     "api_key = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
@@ -1171,11 +1215,61 @@
     "```\n",
     "</details>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "summary-recap",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Summary & Recap\n",
+    "\n",
+    "In this notebook, you learned the fundamentals of building single agents with the Microsoft Agent Framework:\n",
+    "\n",
+    "### Key Concepts\n",
+    "\n",
+    "| Concept | Description |\n",
+    "|---------|-------------|\n",
+    "| **ChatAgent** | The base agent class that wraps a chat client and provides agentic capabilities |\n",
+    "| **AgentThread** | Maintains conversation state for multi-turn interactions |\n",
+    "| **Function Tools** | Python functions exposed to the agent for performing actions |\n",
+    "| **Middleware** | Interceptors for logging, validation, and cross-cutting concerns |\n",
+    "\n",
+    "### What You Built\n",
+    "\n",
+    "1. **Basic Agent** - A simple Q&A agent using `client.create_agent()`\n",
+    "2. **Multi-turn Conversations** - Used `AgentThread` to maintain context across messages\n",
+    "3. **Function Tools** - Created tool classes (`NotesTools`, `LightsTools`, `TaskManagerTools`) with annotated parameters\n",
+    "4. **Middleware Pipeline** - Added logging at agent, function, and chat levels\n",
+    "\n",
+    "### Key Patterns\n",
+    "\n",
+    "```python\n",
+    "# Creating an agent\n",
+    "agent = client.create_agent(\n",
+    "    instructions=\"Your system prompt here\",\n",
+    "    tools=[your_function, tool_instance.method]\n",
+    ")\n",
+    "\n",
+    "# Multi-turn conversation\n",
+    "thread = agent.get_new_thread()\n",
+    "response = await agent.run(\"user message\", thread=thread)\n",
+    "\n",
+    "# Annotated parameters for better LLM understanding\n",
+    "def my_tool(param: Annotated[str, \"Description for LLM\"]) -> str:\n",
+    "    \"\"\"Docstring becomes the tool description.\"\"\"\n",
+    "    ...\n",
+    "```\n",
+    "\n",
+    "### Next Steps\n",
+    "\n",
+    "In the next notebook (`01.2-single-agent-mcp.ipynb`), you'll learn how to extend your agents with **MCP (Model Context Protocol) servers** to access external tools and services."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agent-framework-workshop",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1189,7 +1283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
