Update dependencies in pyproject.toml and uv.lock; modify notebook for setup validation and conversation handling

--- a/01-single-agents/01.1-single-agents.ipynb
+++ b/01-single-agents/01.1-single-agents.ipynb
@@ -58,24 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "setup-validation",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing required environment variables:\n",
-      "  - AZURE_OPENAI_ENDPOINT\n",
-      "  - AZURE_OPENAI_API_KEY\n",
-      "  - AZURE_OPENAI_API_VERSION\n",
-      "  - AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\n",
-      "\n",
-      "Please create a .env file with these variables or set them in your environment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -242,14 +228,20 @@
     "    \n",
     "    # get response from the agent, passing the same thread\n",
     "    response = await agent.run(user_message, thread=thread)\n",
-    "    print(\"*** Agent:\", response.text)\n",
-    "\n",
-    "print(\"-\" * 25)\n",
-    "\n",
+    "    print(\"*** Agent:\", response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52ecdd68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Print the final conversation history from the thread\n",
     "messages = await thread.message_store.list_messages()\n",
     "for msg in messages:\n",
-    "    print(f\"[{msg.role}] {msg.text}\")\n"
+    "    print(f\"[{msg.role}] {msg.text}\")"
    ]
   },
   {
@@ -801,7 +793,7 @@
     ")\n",
     "\n",
     "result = await agent.run(\n",
-    "    \"turn on all lamps\",\n",
+    "    \"turn off all lamps\",\n",
     "    )\n",
     "\n",
     "print(result)\n",
@@ -956,262 +948,6 @@
     "    )\n",
     "\n",
     "print(\"Assistant >\" + str(result))\n",
-    "```\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70105f17",
-   "metadata": {},
-   "source": [
-    "### Exercise: Create Your Own Function Tools\n",
-    "\n",
-    "Now it's your turn to create a custom plugin and use it with an agent. Your plugin could simulate a database lookup, a translation service, or any other useful functionality.\n",
-    "\n",
-    "Your task:\n",
-    "1. Create a custom plugin class with at least two kernel functions\n",
-    "2. Add the plugin to the kernel\n",
-    "3. Create an agent that uses your plugin\n",
-    "4. Test the agent with appropriate queries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa6d4289",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# If you decide to implement a translation service, here's some data for you:\n",
-    " # Dictionary of supported languages and their codes\n",
-    "_supported_languages = {\n",
-    "      \"english\": \"en\",\n",
-    "      \"spanish\": \"es\",\n",
-    "      \"french\": \"fr\",\n",
-    "      \"german\": \"de\",\n",
-    "      \"italian\": \"it\",\n",
-    "      \"japanese\": \"ja\",\n",
-    "      \"chinese\": \"zh\",\n",
-    "  }\n",
-    "  \n",
-    "  # Simple translation dictionary for common phrases (in a real plugin, this would use an API)\n",
-    "_translations = {\n",
-    "      \"hello\": {\n",
-    "          \"es\": \"hola\",\n",
-    "          \"fr\": \"bonjour\",\n",
-    "          \"de\": \"hallo\",\n",
-    "          \"it\": \"ciao\",\n",
-    "          \"ja\": \"こんにちは\",\n",
-    "          \"zh\": \"你好\"\n",
-    "      },\n",
-    "      \"goodbye\": {\n",
-    "          \"es\": \"adiós\",\n",
-    "          \"fr\": \"au revoir\",\n",
-    "          \"de\": \"auf wiedersehen\",\n",
-    "          \"it\": \"arrivederci\",\n",
-    "          \"ja\": \"さようなら\",\n",
-    "          \"zh\": \"再见\"\n",
-    "      },\n",
-    "      \"thank you\": {\n",
-    "          \"es\": \"gracias\",\n",
-    "          \"fr\": \"merci\",\n",
-    "          \"de\": \"danke\",\n",
-    "          \"it\": \"grazie\",\n",
-    "          \"ja\": \"ありがとう\",\n",
-    "          \"zh\": \"谢谢\"\n",
-    "      },\n",
-    "      \"please\": {\n",
-    "          \"es\": \"por favor\",\n",
-    "          \"fr\": \"s'il vous plaît\",\n",
-    "          \"de\": \"bitte\",\n",
-    "          \"it\": \"per favore\",\n",
-    "          \"ja\": \"お願いします\",\n",
-    "          \"zh\": \"请\"\n",
-    "      },\n",
-    "      \"how are you\": {\n",
-    "          \"es\": \"¿cómo estás?\",\n",
-    "          \"fr\": \"comment allez-vous?\",\n",
-    "          \"de\": \"wie geht es dir?\",\n",
-    "          \"it\": \"come stai?\",\n",
-    "          \"ja\": \"お元気ですか？\",\n",
-    "          \"zh\": \"你好吗？\"\n",
-    "      }\n",
-    "  }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b354623",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here to create a custom plugin\n",
-    "\n",
-    "\n",
-    "# 1. Define your function tool class with kernel functions\n",
-    "\n",
-    "# 2. Create an instance and add it to the kernel\n",
-    "\n",
-    "# 3. Create an agent that can use your plugin\n",
-    "\n",
-    "# 4. Test the agent with appropriate queries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "72766f25",
-   "metadata": {},
-   "source": [
-    "\n",
-    "<details>\n",
-    "  <summary>Click to see solution</summary>\n",
-    "  \n",
-    "  ```python\n",
-    "\n",
-    "from typing import Annotated\n",
-    "\n",
-    "class TranslationTool:\n",
-    "    \"\"\"A tool that simulates a language translation service.\"\"\"\n",
-    "    \n",
-    "    # Dictionary of supported languages and their codes\n",
-    "    _supported_languages = {\n",
-    "        \"english\": \"en\",\n",
-    "        \"spanish\": \"es\",\n",
-    "        \"french\": \"fr\",\n",
-    "        \"german\": \"de\",\n",
-    "        \"italian\": \"it\",\n",
-    "        \"japanese\": \"ja\",\n",
-    "        \"chinese\": \"zh\",\n",
-    "    }\n",
-    "    \n",
-    "    # Simple translation dictionary for common phrases (in a real plugin, this would use an API)\n",
-    "    _translations = {\n",
-    "        \"hello\": {\n",
-    "            \"es\": \"hola\",\n",
-    "            \"fr\": \"bonjour\",\n",
-    "            \"de\": \"hallo\",\n",
-    "            \"it\": \"ciao\",\n",
-    "            \"ja\": \"こんにちは\",\n",
-    "            \"zh\": \"你好\"\n",
-    "        },\n",
-    "        \"goodbye\": {\n",
-    "            \"es\": \"adiós\",\n",
-    "            \"fr\": \"au revoir\",\n",
-    "            \"de\": \"auf wiedersehen\",\n",
-    "            \"it\": \"arrivederci\",\n",
-    "            \"ja\": \"さようなら\",\n",
-    "            \"zh\": \"再见\"\n",
-    "        },\n",
-    "        \"thank you\": {\n",
-    "            \"es\": \"gracias\",\n",
-    "            \"fr\": \"merci\",\n",
-    "            \"de\": \"danke\",\n",
-    "            \"it\": \"grazie\",\n",
-    "            \"ja\": \"ありがとう\",\n",
-    "            \"zh\": \"谢谢\"\n",
-    "        },\n",
-    "        \"please\": {\n",
-    "            \"es\": \"por favor\",\n",
-    "            \"fr\": \"s'il vous plaît\",\n",
-    "            \"de\": \"bitte\",\n",
-    "            \"it\": \"per favore\",\n",
-    "            \"ja\": \"お願いします\",\n",
-    "            \"zh\": \"请\"\n",
-    "        },\n",
-    "        \"how are you\": {\n",
-    "            \"es\": \"¿cómo estás?\",\n",
-    "            \"fr\": \"comment allez-vous?\",\n",
-    "            \"de\": \"wie geht es dir?\",\n",
-    "            \"it\": \"come stai?\",\n",
-    "            \"ja\": \"お元気ですか？\",\n",
-    "            \"zh\": \"你好吗？\"\n",
-    "        }\n",
-    "    }\n",
-    "    \n",
-    "  \n",
-    "    async def list_languages(self) -> str:\n",
-    "        \"\"\"Return a list of languages supported by the translation service.\"\"\"\n",
-    "        languages = list(self._supported_languages.keys())\n",
-    "        return f\"Supported languages: {', '.join(languages)}\"\n",
-    "    \n",
-    "\n",
-    "    async def translate(\n",
-    "        self, \n",
-    "        text: Annotated[str, \"The English text to translate.\"],\n",
-    "        target_language: Annotated[str, \"The language to translate to.\"]\n",
-    "    ) -> str:\n",
-    "        \"\"\"Translate the given English text to the specified target language.\"\"\"\n",
-    "        # Convert to lowercase for matching\n",
-    "        text_lower = text.lower()\n",
-    "        language_lower = target_language.lower()\n",
-    "        \n",
-    "        # Check if the target language is supported\n",
-    "        if language_lower not in self._supported_languages:\n",
-    "            return f\"Sorry, translation to {target_language} is not supported. Use list_languages() to see supported languages.\"\n",
-    "        \n",
-    "        # Get the language code\n",
-    "        lang_code = self._supported_languages[language_lower]\n",
-    "        \n",
-    "        # Check if we have a translation for this phrase\n",
-    "        for phrase, translations in self._translations.items():\n",
-    "            if phrase in text_lower:\n",
-    "                if lang_code in translations:\n",
-    "                    # Replace the phrase with its translation\n",
-    "                    translated = text.lower().replace(phrase, translations[lang_code])\n",
-    "                    return f\"Translation to {target_language}: {translated}\"\n",
-    "        \n",
-    "        # For phrases we don't have stored, we'll simulate a generic response\n",
-    "        return f\"Translation to {target_language} would normally be provided through an external API.\"\n",
-    "    \n",
-    "\n",
-    "    async def detect_language(self, text: Annotated[str, \"The text to analyze.\"]) -> str:\n",
-    "        \"\"\"Detect the likely language of the provided text.\"\"\"\n",
-    "        text_lower = text.lower()\n",
-    "        \n",
-    "        # Simple detection based on known translations\n",
-    "        for phrase, translations in self._translations.items():\n",
-    "            for lang_code, translated_phrase in translations.items():\n",
-    "                if translated_phrase in text_lower:\n",
-    "                    # Get the language name from the code\n",
-    "                    language = next(name for name, code in self._supported_languages.items() if code == lang_code)\n",
-    "                    return f\"Detected language: {language.capitalize()}\"\n",
-    "        \n",
-    "        # Default response if no match found\n",
-    "        return \"Language detection would normally use detailed analysis through an external API.\"\n",
-    "\n",
-    "tools = TranslationTool()\n",
-    "\n",
-    "# Create a language assistant\n",
-    "language_agent = client.create_agent(\n",
-    "    name=\"LanguageAssistant\",\n",
-    "    instructions=\"\"\"You are a helpful language assistant that can help users with translations.\n",
-    "    Use the available functions to provide translations and language information.\n",
-    "    \n",
-    "    When answering questions:\n",
-    "    1. If a user wants to know what languages are supported, use the list_languages function\n",
-    "    2. If a user wants a translation, use the translate function\n",
-    "    3. If a user provides text in a foreign language, try to identify it with detect_language\n",
-    "    4. Provide cultural context when relevant to the translation\n",
-    "    \"\"\",\n",
-    "    tools = [tools.list_languages, tools.translate, tools.detect_language]\n",
-    ")\n",
-    "\n",
-    "thread = language_agent.get_new_thread()\n",
-    "    \n",
-    "# Test questions\n",
-    "questions = [\n",
-    "    \"What languages can you translate to?\",\n",
-    "    \"How do I say 'thank you' in French?\",\n",
-    "    \"Can you detect what language this is: 'Grazie mille'?\"\n",
-    "]\n",
-    "\n",
-    "\n",
-    "for question in questions:\n",
-    "    print(f\"\\nUser: {question}\")\n",
-    "    response = await language_agent.run(question, thread=thread)\n",
-    "    print(f\"Language Assistant: {response.text}\")\n",
     "```\n",
     "</details>"
    ]
