Fix typos in notebook: correct "an single agent" to "a single agent" and update date format in comments from "%d-%m" to "%d.%m"

--- a/01-single-agents/01.1-single-agents.ipynb
+++ b/01-single-agents/01.1-single-agents.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "### Our first Agent\n",
     "\n",
-    "Now, let's build an single agent to get started. First, create a chat client for communicating with Azure OpenAI:\n",
+    "Now, let's build a single agent to get started. First, create a chat client for communicating with Azure OpenAI:\n",
     "\n",
     "```\n",
     "AZURE_OPENAI_ENDPOINT - The endpoint it should talk to by default\n",
@@ -476,7 +476,7 @@
     "        \n",
     "        # TODO: Add a new task with priority and deadline (stored as DD-MM).\n",
     "        # Hint- Try parsing deadline in two formats:\n",
-    "        #    * '30.10' → use \"%d-%m\"\n",
+    "        #    * '30.10' → use \"%d.%m\"\n",
     "        #    * 'September 30' → use \"%B %d\"\n",
     "        # If parsing fails, keep the raw input.\n",
     "\n",
@@ -501,7 +501,7 @@
     "# TODO: Create tools instance\n",
     "\n",
     "\n",
-    "# TODO: Create an gent with instructions and tools\n",
+    "# TODO: Create an agent with instructions and tools\n",
     "\n",
     "\n",
     "# TODO: Create a thread for multi-turn conversation \n",
@@ -548,7 +548,7 @@
     "        try:\n",
     "            # Try parsing \"September 30\" or \"30.10\"\n",
     "            if \".\" in deadline:  # Format like 30.10\n",
-    "                parsed_date = datetime.strptime(deadline, \"%d-%m\")\n",
+    "                parsed_date = datetime.strptime(deadline, \"%d.%m\")\n",
     "            else:  # Format like September 30\n",
     "                parsed_date = datetime.strptime(deadline, \"%B %d\")\n",
     "            deadline_str = parsed_date.strftime(\"%d-%m\")\n",
