Update project configuration and dependencies; simplify notebook outputs

--- a/01-single-agents/01.2-single-agent-mcp.ipynb
+++ b/01-single-agents/01.2-single-agent-mcp.ipynb
@@ -56,18 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "setup-validation",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setup validated! All required environment variables are set.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -97,18 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d3c65b71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Client created successfully!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from agent_framework.azure import AzureOpenAIChatClient\n",
@@ -140,71 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ms-learn-demo",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "To create an Azure Storage account using the Azure CLI, follow these steps:\n",
-      "\n",
-      "1. **Sign in to Azure**\n",
-      "   If you're not already signed in, run:\n",
-      "   ```\n",
-      "   az login\n",
-      "   ```\n",
-      "\n",
-      "2. **Create a Resource Group (if needed)**\n",
-      "   ```\n",
-      "   az group create --name <resource-group-name> --location <location>\n",
-      "   ```\n",
-      "   Example:\n",
-      "   ```\n",
-      "   az group create --name storage-resource-group --location eastus\n",
-      "   ```\n",
-      "\n",
-      "3. **Create the Storage Account**\n",
-      "   Use the `az storage account create` command. Replace the placeholder values with your desired values.\n",
-      "   ```\n",
-      "   az storage account create \\\n",
-      "     --name <account-name> \\\n",
-      "     --resource-group <resource-group-name> \\\n",
-      "     --location <location> \\\n",
-      "     --sku Standard_RAGRS \\\n",
-      "     --kind StorageV2 \\\n",
-      "     --min-tls-version TLS1_2 \\\n",
-      "     --allow-blob-public-access false\n",
-      "   ```\n",
-      "   Example:\n",
-      "   ```\n",
-      "   az storage account create \\\n",
-      "     --name mystorageaccount123 \\\n",
-      "     --resource-group storage-resource-group \\\n",
-      "     --location eastus \\\n",
-      "     --sku Standard_RAGRS \\\n",
-      "     --kind StorageV2 \\\n",
-      "     --min-tls-version TLS1_2 \\\n",
-      "     --allow-blob-public-access false\n",
-      "   ```\n",
-      "\n",
-      "   - The storage account name must be unique across Azure.\n",
-      "   - You can adjust options such as `--sku`, `--kind`, etc. as per your needs.\n",
-      "\n",
-      "4. **(Optional) Enable Hierarchical Namespace for Data Lake Storage**\n",
-      "   Add the following parameter to the create command:\n",
-      "   ```\n",
-      "   --enable-hierarchical-namespace true\n",
-      "   ```\n",
-      "\n",
-      "**Reference:**  \n",
-      "- [Create an Azure storage account — Azure CLI](https://learn.microsoft.com/en-us/azure/storage/common/storage-account-create#create-a-storage-account)\n",
-      "  \n",
-      "Let me know if you need more specific scenarios or details!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
@@ -253,25 +176,7 @@
     "\n",
     "```bash\n",
     "cd mcp\n",
-    "uv run --prerelease=allow mcp_server.py\n",
-    "```\n",
-    "\n",
-    "You should see output like:\n",
-    "```\n",
-    "============================================================\n",
-    "Contoso Customer Service MCP Server\n",
-    "============================================================\n",
-    "\n",
-    "Available tools:\n",
-    "  - list_customers: List all customers\n",
-    "  - get_customer: Get a specific customer by ID\n",
-    "  - get_billing_summary: Check what a customer owes\n",
-    "  - get_support_tickets: View customer's support tickets\n",
-    "  - create_support_ticket: Create a new support ticket\n",
-    "\n",
-    "============================================================\n",
-    "\n",
-    "INFO:     Uvicorn running on http://127.0.0.1:8000\n",
+    "uv run mcp_server.py\n",
     "```"
    ]
   },
@@ -287,36 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "tool-discovery",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to: Contoso\n",
-      "\n",
-      "Discovered 5 tools:\n",
-      "\n",
-      "  - list_customers\n",
-      "    List all customers in the system\n",
-      "\n",
-      "  - get_customer\n",
-      "    Get detailed information for a specific customer by their ID\n",
-      "\n",
-      "  - get_billing_summary\n",
-      "    Get billing summary showing what a customer owes\n",
-      "\n",
-      "  - get_support_tickets\n",
-      "    Get support tickets for a customer, optionally filtered to open tickets only\n",
-      "\n",
-      "  - create_support_ticket\n",
-      "    Create a new support ticket for a customer\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
@@ -429,6 +308,9 @@
     "1. Look up a customer's information\n",
     "2. Check their billing summary\n",
     "3. Create a support ticket if they have an issue\n",
+    "4. **Verify the ticket was created** by listing open tickets\n",
+    "\n",
+    "This last step is important - it confirms the data was actually persisted to the database!\n",
     "\n",
     "Use a **multi-turn conversation** (with `AgentThread`) so the agent remembers context between messages.\n",
     "\n",
@@ -465,7 +347,8 @@
     "    messages = [\n",
     "        \"Hi, I'm customer #1. Can you look up my account?\",\n",
     "        \"What's my current billing status?\",\n",
-    "        \"I'd like to report an issue - my internet has been slow lately. Can you create a ticket for me?\"\n",
+    "        \"I'd like to report an issue - my internet has been slow lately. Can you create a ticket for me?\",\n",
+    "        \"Can you show me all my open support tickets to confirm it was created?\"\n",
     "    ]\n",
     "    \n",
     "    for message in messages:\n",
@@ -513,7 +396,8 @@
     "    messages = [\n",
     "        \"Hi, I'm customer #1. Can you look up my account?\",\n",
     "        \"What's my current billing status?\",\n",
-    "        \"I'd like to report an issue - my internet has been slow lately. Can you create a ticket for me?\"\n",
+    "        \"I'd like to report an issue - my internet has been slow lately. Can you create a ticket for me?\",\n",
+    "        \"Can you show me all my open support tickets to confirm it was created?\"\n",
     "    ]\n",
     "    \n",
     "    for message in messages:\n",
